force-app/main/default/objects/Score_Sheet__c/fields/Willingness_to_cooperate_with_Hisense_A__c.field-meta.xml
<CustomField>
    <fullName>Willingness_to_cooperate_with_Hisense_A__c</fullName>
    <inlineHelpText>Whether the Value Chain can be shared, who decides the market retail price and wholesale price (10 Points)
(Control of terminal price)</inlineHelpText>
    <label>Willingness to cooperate with Hisense A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Share, Termial price determined by Hisense</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Share, Termial price determined by Hisense and customer</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Share, Termial price determined by customer accordance with Hisense policy</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>No share,The retail price and wholesales price should be determined by themselves</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>