force-app/main/default/objects/Score_Sheet__c/fields/Willingness_to_cooperate_with_Hisense_B__c.field-meta.xml
<CustomField>
    <fullName>Willingness_to_cooperate_with_Hisense_B__c</fullName>
    <inlineHelpText>Whether the data of inventory and sell out can be shared(10 Points)</inlineHelpText>
    <label>Willingness to cooperate with Hisense B</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>part of own data and channel data are ok</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>own data is ok, channel data can&apos;t</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>