force-app/main/default/objects/Score_Sheet__c/recordTypes/Customer_selection_and_evaluation_criteria.recordType-meta.xml
<RecordType>
    <fullName>Customer_selection_and_evaluation_criteria</fullName>
    <active>true</active>
    <label>Customer selection and evaluation criteria</label>
</RecordType>