force-app/main/default/objects/Score_Sheet__c/recordTypes/New_Brand_Customer_selection_and_evaluation_criteria.recordType-meta.xml
<RecordType>
    <fullName>New_Brand_Customer_selection_and_evaluation_criteria</fullName>
    <active>true</active>
    <label>New Brand Customer selection and evaluation criteria</label>
</RecordType>