force-app/main/default/objects/Score_Sheet__c/recordTypes/Oversea_Company_Score.recordType-meta.xml
<RecordType>
    <fullName>Oversea_Company_Score</fullName>
    <active>false</active>
    <label>Oversea Company Score</label>
</RecordType>