force-app/main/default/objects/Score_Sheet__c/recordTypes/Oversea_Company_Score_New.recordType-meta.xml
<RecordType>
    <fullName>Oversea_Company_Score_New</fullName>
    <active>false</active>
    <label>Oversea Company Score(New)</label>
</RecordType>