force-app/main/default/objects/Score_Sheet__c/recordTypes/Sales_Department_new_OEM_Score.recordType-meta.xml
<RecordType>
    <fullName>Sales_Department_new_OEM_Score</fullName>
    <active>false</active>
    <label>Sales Department (new OEM) Score</label>
</RecordType>